k8s/development/01-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mimir-aip
